--- a/BelajarView/Views/Home/Details.cshtml
+++ b/BelajarView/Views/Home/Details.cshtml
@@ -1,8 +1,27 @@
-﻿
+﻿@model Student //dengan viewimport tidak perlu BelajarView.Models
 @{
-    ViewData["Title"] = "Details Page";
-    Layout = null;
+    ViewBag.Title = "Student Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Details</h1>
+<div class="row justify-content-center m-3">
+    <div class="col-sm-8">
+        <div class="card">
+            <div class="card-header text-center">
+                <h1>@Model?.Name</h1>
+            </div>
 
+            <div class="card-body text-center">
+                <h4>Studnet ID : @Model?.Id</h4>
+                <h4>Branch : @Model?.Branch</h4>
+                <h4>Section : @Model?.Section</h4>
+                <h4>Gender : @Model?.Gender</h4>
+            </div>
+            <div class="card-footer text-center">
+                <a href="#" class="btn btn-primary">Back</a>
+                <a href="#" class="btn btn-primary">Edit</a>
+                <a href="#" class="btn btn-danger">Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
